# vehicle-orders-pipeline

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
analysis/: answers.md
data/: vehicles.csv
src/pipeline/: clean.py  config.py  ingest.py  model.py  questions.sql  run.py
src/vehicle_orders_pipeline.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_clean.py  test_marts.py  test_model.py
