[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vehicle-orders-pipeline"
version = "0.1.0"
description = "Small, production-minded analytics pipeline for vehicle orders."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
